# misplay

./: .gitignore  misplay.ini.dist  misplay.service  run.py  run_tests.py  setup.cfg
misplay/: __main__.py  epd2in13.py  misplay.py  source.py
misplay/buttons/: __init__.py  mpd.py
misplay/displays/: __init__.py  dummy.py  epd2in13.py  misplay.py
misplay/panels/: ipc.py  mpd.py  panel.py  status.py  time.py  wallpaper.py
misplay/sources/: __init__.py  fifo.py  mqtt.py  source.py
tests/: panel_ipc_test.py  panel_text_test.py  panel_time_test.py  test_panel_text.py  test_panel_time.py  test_sources.py
