[metadata]
name = misplay-indigoparadox
version = v0.21.3.17
description = Modular layout engine for embedded displays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/indigoparadox/misplay
protect_urls =
   Bug Tracker = https://github.com/indigoparadox/misplay/issues
classifiers =
   Programming Language :: Python :: 3
   Development Status :: 4 - Beta
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.6
include_package_data = True
zip_safe = False
install_requires =
   Faker
   Pillow
   paho-mqtt
   spidev
   python-mpd2
   RPi.GPIO

[options.entry_points]
console_scripts =
   smtputt = misplay.__main__:main
